Made the AI smarter

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <div class="player" id="player">
                         <span class="name">Player</span> [<span class="score">0</span>]
                     </div>
-                    <div class="ia" id="ia">
-                        <span class="name">IA</span> [<span class="score">0</span>]
+                    <div class="ia" id="ai">
+                        <span class="name">AI</span> [<span class="score">0</span>]
                     </div>
                 </div>
                 <div>
